fix(AdminModal): avatar collapse when title is too long fixed

--- a/src/components/AdminModal/AdminModal.css
+++ b/src/components/AdminModal/AdminModal.css
@@ -27,6 +27,8 @@
 }
 
 .avatar {
+  flex: 0 0 auto;
+  align-self: flex-start;
   margin-right: 16px;
 }
 
